Ajout des images

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "infrabass-site",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://TOFF23.github.io/infrabass-site",
+  "homepage": "https://T0FF23.github.io/infrabass-site",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
